--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,10 +16,10 @@
 	</context-param>
 
 	<context-param>
-		<param-name>facelets.LIBRARIES</param-name>
+		<param-name>javax.faces.FACELETS_LIBRARIES</param-name>
 		<param-value>/WEB-INF/my.taglib.xml</param-value>
 	</context-param>
-
+	
 	<servlet>
 		<servlet-name>FacesServlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
